[gd_scene load_steps=4 format=2]

[ext_resource path="res://FlyingClothes/FlyingClothes.gd" type="Script" id=1]
[ext_resource path="res://FlyingClothes/FlyingClothes.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.52745, 5.33311 )

[node name="FlyingClothes" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 2 )
offset = Vector2( 0, 4 )
hframes = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.8147e-06, 11.7072 )
shape = SubResource( 1 )

[node name="StateTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
